--- a/style.css
+++ b/style.css
@@ -1,19 +1,6 @@
-.city {
-  /* background-color: blue; */
-  background-image: url("sea.jfif");
-  color: white;
-  border: 2px solid black;
-  margin: 50px;
-  padding: 50px;
-}
-
-.center {
-  margin-left: auto;
-  margin-right: auto;
-
-}
-
-h1 {
-  text-align: center;
-  margin-top: 200px;
+th,
+td {
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: greenyellow;
 }
