--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
-th,
+body {
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+}
+
+table {
+  align-self: center;
+  text-align: center;
+  border: 5px solid grey;
+  color: aliceblue;
+  background-color: burlywood;
+}
+
+th {
+  border: 0;
+}
+
 td {
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: greenyellow;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(56, 109, 109);
 }
