--- a/style.css
+++ b/style.css
@@ -1,24 +1,22 @@
 body {
-  background-color: grey;
+  background-color: darkgrey;
   display: flex;
   justify-content: center;
   height: 100%;
+  margin-top: 50px;
+  
 }
 
 table {
-  align-self: center;
-  text-align: center;
-  border: 5px solid grey;
-  color: aliceblue;
-  background-color: burlywood;
-}
-
-th {
-  border: 0;
+  background-color: blue;
+  width: 300px;
+  height: 300px;
+  border: 2px solid blue;
+  
 }
 
 td {
-  width: 50px;
-  height: 50px;
-  background-color: rgb(56, 109, 109);
+
+  background-color: yellow;
+  border: 2px solid blue;
 }
