--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 body {
-  background-color: white;
-  /* display: flex; */
-  justify-content: center;
-  height: 100%;
-  margin-top: 50px;
-  
+  background-color: rgba(84, 120, 134, 0.609);
 }
 
-table {
-  background-color: blue;
-  width: 500px;
-  height: 500px;
-  border: 2px solid blue;
-  
-}
-/* table {
-  background-color: blue;
-  width: 300px;
-  height: 300px;
-  border: 2px solid blue;
-  
-} */
-
-td {
-
-  background-color: yellow;
-  border: 2px solid blue;
+h1 {
+  margin: 10px;
+  font-style: italic;
 }
 
+div {
+  display: table-caption;
+  border: 2px solid black;
+  background-color: burlywood;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+p {
+  margin: 10px;
+}
+
+label {
+  padding-left: 10px;
+  position: absolute;
+}
+
+.input {
+  margin-left: 15em;
+  margin-right: 10px;
+}
+
+#converter {
+  background-color: gray;
+}
