--- a/style.css
+++ b/style.css
@@ -1,34 +1,80 @@
-body {
-  background-color: rgba(84, 120, 134, 0.609);
+.body {
+  background-color: rgba(4, 69, 77, 0.694);
 }
 
-h1 {
-  margin: 10px;
+.h1 {
+  text-align: center;
   font-style: italic;
 }
 
-div {
-  display: table-caption;
-  border: 2px solid black;
+.container {
+  width: fit-content;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 2px solid skyblue;
+  border-radius: 5px;
+  background-color: darkgray;
+}
+
+.paragraph {
+  display: block;
+  width: fit-content;
+  margin: 5px;
+  padding: 5px;
+  border: 1px solid black;
   background-color: burlywood;
   border-radius: 10px;
-  margin: 10px;
 }
 
-p {
-  margin: 10px;
+.buttonParagraph {
+  margin: 5px;
+  padding: 5px;
 }
 
-label {
-  padding-left: 10px;
+.label {
   position: absolute;
 }
 
 .input {
-  margin-left: 15em;
-  margin-right: 10px;
+  width: 200px;
+  margin-left: 22em;
+  border: 1px solid rgba(111, 69, 189, 0.889);
+  border-radius: 5px;
+  line-height: 1.5;
 }
 
-#converter {
-  background-color: gray;
+.input:hover {
+  background-color: rgba(135, 206, 235);
+}
+
+.button {
+  font-weight: bold;
+  line-height: 1.3;
+  border: 0.5 ridge;
+  border-radius: 5px;
+  border-color: skyblue;
+  outline: 1px solid;
+  outline-color: #337AB7;
+  outline-offset: 0px;
+  transition: all 2s cubic-bezier(0.20, 1, 0.5, 1);
+}
+
+.button:hover {
+  outline-color: rgba(208, 66, 66, 0);
+  outline-offset: 15px;
+  color: rgba(255, 250, 240, 0.907);
+  background-color: #337AB7;
+}
+
+.ol {
+  padding-left: 15px;
+  width: fit-content;
+}
+
+.li {
+  margin: 10px 0;
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: darkgray;
 }
